<resources>
    <string name="app_name">MovieApp</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">Username must be between 5 and 15 characters long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="login_succes">Login succeeded!</string>
    <string name="link_register">New here? Register here</string>
    <string name="link_login">Already have an account? Click here!</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_unmatched_credentials">Username and Password do not match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Settings -->

    <string name="preference_file_key">twanvm.movieapp.SHARED_PREFS_FILE</string>
    <string name="saved_token">saved_token</string>

    <!-- Strings related to errors -->
    <string name="error_server_offline">Error: Server is offline</string>
    <string name="error_connection_timeout">Error: Connection timed out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_register">Register</string>


    <!--Strings related to FilmDetailActivity-->
    <string name="title_film_year">Year:</string>
    <string name="title_film_length">Length:</string>
    <string name="title_film_rating">Rating:</string>
    <string name="title_film_descr">Description:</string>
    <string name="title_film_divider">|</string>
    <string name="title_film_inven">Inventory:</string>
    <string name="title_film_item">Item:</string>
    <string name="title_film_btn_available">Rent item</string>
    <string name="title_film_btn_unavailable">Item unavailable</string>
    <string name="title_film_lv_no_items">No items for rent available</string>

</resources>
