<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activityFilmDetail_tv_movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/activityFilmDetail_tv_releaseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_film_year"
        app:layout_constraintLeft_toLeftOf="@+id/activityFilmDetail_tv_movieTitle"
        app:layout_constraintTop_toBottomOf="@+id/activityFilmDetail_tv_movieTitle" />

    <TextView
        android:id="@+id/activityFilmDetail_tv_releaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/activityFilmDetail_tv_releaseTitle"
        app:layout_constraintTop_toTopOf="@+id/activityFilmDetail_tv_releaseTitle"
        android:layout_marginStart="2dp" />

    <TextView
        android:id="@+id/divider1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/title_film_divider"
        app:layout_constraintLeft_toRightOf="@+id/activityFilmDetail_tv_releaseText"
        app:layout_constraintTop_toTopOf="@+id/activityFilmDetail_tv_releaseText"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/activityFilmDetail_tv_lengthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_film_length"
        app:layout_constraintLeft_toRightOf="@+id/divider1"
        android:layout_marginLeft="4dp"
        app:layout_constraintTop_toTopOf="@+id/divider1"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/activityFilmDetail_tv_lengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/activityFilmDetail_tv_lengthTitle"
        android:layout_marginLeft="2dp"
        app:layout_constraintTop_toTopOf="@+id/activityFilmDetail_tv_lengthTitle"
        android:layout_marginStart="2dp" />

    <TextView
        android:id="@+id/divider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_film_divider"
        app:layout_constraintLeft_toRightOf="@+id/activityFilmDetail_tv_lengthText"
        android:layout_marginLeft="4dp"
        app:layout_constraintTop_toTopOf="@+id/activityFilmDetail_tv_lengthText"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/activityFilmDetail_tv_ratingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_film_rating"
        app:layout_constraintLeft_toRightOf="@+id/divider2"
        android:layout_marginLeft="4dp"
        app:layout_constraintTop_toTopOf="@+id/divider2"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/activityFilmDetail_tv_ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/activityFilmDetail_tv_ratingTitle"
        android:layout_marginLeft="2dp"
        app:layout_constraintTop_toTopOf="@+id/activityFilmDetail_tv_ratingTitle"
        android:layout_marginStart="2dp" />

    <TextView
        android:id="@+id/activityFilmDetail_tv_descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_film_descr"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/activityFilmDetail_tv_releaseTitle"
        app:layout_constraintTop_toBottomOf="@+id/activityFilmDetail_tv_releaseTitle" />

    <TextView
        android:id="@+id/activityFilmDetail_tv_descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="@+id/activityFilmDetail_tv_descriptionTitle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activityFilmDetail_tv_descriptionTitle"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/activityFilmDetail_tv_inventoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/title_film_inven"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/activityFilmDetail_tv_descriptionText"
        app:layout_constraintLeft_toLeftOf="@+id/activityFilmDetail_tv_descriptionText" />



    <ListView
        android:id="@+id/activityFilmDetail_lv_inventory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/activityFilmDetail_tv_inventoryTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityFilmDetail_tv_inventoryTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title_film_lv_no_items"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/activityFilmDetail_tv_inventoryTitle"
        app:layout_constraintTop_toBottomOf="@+id/activityFilmDetail_tv_inventoryTitle"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>